# esp-ducky

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig
doc/example/payloads/windows/: download_execute.txt  notepad_hello_world.txt
main/: CMakeLists.txt  idf_component.yml
main/inc/: EspDucky.hpp  HttpServer.hpp  Logger.hpp  MDNSResponder.hpp  MdnsResponder.hpp  Script.hpp  ScriptParser.hpp  StaticWebData.hpp  UsbDevice.hpp  Utils.hpp  WebData.hpp  WiFiAccessPoint.hpp
main/src/: EspDucky.cpp  HttpServer.cpp  Logger.cpp  MDNSResponder.cpp  MdnsResponder.cpp  Script.cpp  ScriptParser.cpp  UsbCallbacks.cpp  UsbDevice.cpp  Utils.cpp  WiFiAccessPoint.cpp  main.cpp
main/web/: CMakeLists.txt  index.html  script.js  style.css
